tests/ui/lint/snapshots/neg_multiply_literal_left.snap
---
source: tests/ui/lint/mod.rs
---
  ● Multiplication by `-1`
   ╭─[test.lis:3:3]
 2 │ fn negate(x: int) -> int {
 3 │   -1 * x
   ·   ───┬──
   ·      ╰── can be simpler
 4 │ }
   ╰────
  help: Use the negation `-x` instead · code: [lint.neg_multiply]
