tests/ui/lint/snapshots/neg_multiply_literal_right.snap
---
source: tests/ui/lint/mod.rs
---
  ● Multiplication by `-1`
   ╭─[test.lis:3:3]
 2 │ fn negate(x: int) -> int {
 3 │   x * -1
   ·   ───┬──
   ·      ╰── can be simpler
 4 │ }
   ╰────
  help: Use the negation `-x` instead · code: [lint.neg_multiply]
