tests/ui/lint/snapshots/negated_equality_not_equal.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Negated equality comparison
   ╭─[test.lis:5:11]
 4 │   let b = false;
 5 │   let _ = !(a != b)
   ·           ────┬────
   ·               ╰── can be simpler
 6 │ }
   ╰────
  help: Rewrite `!(a != b)` as `a == b` · code: [lint.negated_equality]
