tests/ui/lint/snapshots/negated_logical_operand_or.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Tautological logical operands
   ╭─[test.lis:4:11]
 3 │   let a = true;
 4 │   let _ = a || !a
   ·           ───┬───
   ·              ╰── always `true`
 5 │ }
   ╰────
  help: Replace with `true`, since an operand or its negation always holds · code: [lint.negated_logical_operand]
